# detection

./: CMakeLists.txt  README.md  det.cpp  motdet.cpp
src/: det.cpp  motdet.cpp
